infrastructure/services/dev/dev-platform/policies/tests/workloads/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: workloads
policies:
- ../../workloads.yaml
resources:
- resources.yaml
variables: ../values.yaml
clusterResources:
- cluster.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: dev-workloads
  resources:
  - dev-platform/run-pod
  - dev-platform/vcluster-0
  - dev-platform/platform-pod
  result: pass
- isValidatingPolicy: true
  kind: Pod
  policy: dev-workloads
  resources:
  - dev-bare/no-guardrails
  - dev-platform/host-network
  - dev-platform/host-path
  - dev-platform/privileged-init
  - dev-platform/node-name
  - dev-platform/node-selector-hostname
  - dev-platform/required-affinity
  - dev-platform/run-pod-wrong-priority
  result: fail
